--- a/Documents/Scrach/index.html
+++ b/Documents/Scrach/index.html
@@ -22,6 +22,9 @@
             @Andrea cano
             Tarea git subir y clonar repositorio
         </p>
+        <br>
+<h3><p> The family is made up of relatives, that is, those people who, for reasons of consanguinity, affinity, adoption or various other reasons, have been accepted as members of that community. Families are usually made up of a few members who usually share the same residence.</p></h3>
+<br>
         <hr>
        
     </body>
