--- a/Documents/Scrach/index.html
+++ b/Documents/Scrach/index.html
@@ -23,7 +23,7 @@
             Tarea git subir y clonar repositorio
         </p>
         <br>
-<h3><p> la vida es un trululu, for reasons of consanguinity, affinity, adoption or various other reasons, have been accepted as members of that community. Families are usually made up of a few members who usually share the same residence.</p></h3>
+<h3><p> no se que estamos haciendo aqui The family is made up of relatives, that is, those people who, for reasons of consanguinity, affinity, adoption or various other reasons, have been accepted as members of that community. Families are usually made up of a few members who usually share the same residence.</p></h3>
 <br>
         <hr>
        
